[tool.poetry]
name = "ezmsg-sigproc"
version = "1.2.4"
description = "Timeseries signal processing implementations in ezmsg"
authors = [
  "Milsap, Griffin <griffin.milsap@gmail.com>",
  "Peranich, Preston <pperanich@gmail.com>",
  "Boulay, Chadwick <chadwick.boulay@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "ezmsg", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
scipy = "^1.6.3"
pywavelets = "^1.6.0"
ezmsg = "^3.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "*"
pytest-asyncio = "*"
flake8 = "*"
frozendict = "^2.4.4"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "tests"]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
